# ClotCAD

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md  cl-occt-viewer.asd  clotcad.asd  index.html  justfile  staple.ext.lisp  start.lisp
.github/workflows/: publish-homepage.yml  release.yml
0.2.3/: index.html
0.3.0/: index.html
0.3.1/: index.html
0.4.0/: index.html
0.4.1/: index.html
docs/: SKILL.md  clotcad-api.md
docs/cheatsheet/: cheatsheet.typ
homepage/: default.ctml  setup.lisp  style.css
openspec/changes/accept-strings-in-resolve-shape/: proposal.md  tasks.md
openspec/changes/add-quit-clotcad/: proposal.md
openspec/changes/add-viewcube/: design.md  proposal.md
openspec/changes/c-to-lisp-migration/: design.md  proposal.md  tasks.md
openspec/changes/clotcad-cheatsheet/: design.md  proposal.md  tasks.md
openspec/changes/clotcad-homepage/: proposal.md  tasks.md
openspec/changes/create-clotcad-agent-skill/: tasks.md
openspec/changes/enriched-docstrings/: design.md  proposal.md
openspec/changes/face-based-reference-frames/: tasks.md
openspec/changes/fix-cl-occt-source-links/: design.md  tasks.md
openspec/changes/fix-file-dialog-theme/: design.md
openspec/changes/handle-sbcl-debugger/: design.md
openspec/changes/high-dpi-viewcube-trihedron-scaling/: design.md
openspec/changes/improve-ui-repl/: design.md
openspec/changes/include-remote-repl-in-export/: proposal.md  tasks.md
openspec/changes/init-script/: design.md  tasks.md
openspec/changes/linux-distribution-packaging/: design.md  proposal.md  tasks.md
openspec/changes/lisp-import-export/: design.md
openspec/changes/make-3d-text/: proposal.md
openspec/changes/maximized-default/: tasks.md
openspec/changes/named-subshape-system/: tasks.md
openspec/changes/object-selection/: design.md
scripts/: make-core.lisp  package.sh  run.sh  slyc-debugger-escape.lisp  start.lisp
scripts/patches/: alive-lsp-default-package.patch
share/: ClotCAD.desktop
share/licenses/: README.md
src/: package.lisp  threading.lisp
src/model/: api.lisp  model.lisp  package.lisp  params.lisp  propagation.lisp
src/viewer/: bindings.lisp  frame.lisp  introspect.lisp  lifecycle.lisp  naming.lisp  ops.lisp  package.lisp  query.lisp  queue.lisp  render.lisp  repl.lisp  select.lisp  sketch.lisp  text.lisp  theme.lisp  ui.lisp
t/: frame.lisp  naming.lisp  query.lisp  sketch.lisp  text.lisp  viewer-tests.lisp
wrap/: OcctGlTools.cpp  OcctGlTools.h  OcctQtTools.cpp  OcctQtTools.h  icon_data.h  occt_viewer.cpp  occt_viewer.h  repl_panel.cpp  repl_panel.h  scene_tree_panel.cpp  scene_tree_panel.h  viewer_state.h  viewer_widget.cpp  viewer_widget.h  viewer_window.cpp  viewer_window.h
(+186 files in other folders)
